force-app/main/default/objects/Invoice__c/fields/Adverse_Party_Invoice_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Party_Invoice_Physical_Address__c</fullName>
    <formula>Matter__r.Physical_Address__c</formula>
    <label>Adverse Party Invoice Physical Address</label>
    <type>Text</type>
</CustomField>