force-app/main/default/objects/Invoice__c/fields/All_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>All_Disbursements__c</fullName>
    <label>All Disbursements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>