force-app/main/default/objects/Invoice__c/fields/Apply_Withholding_Tax__c.field-meta.xml
<CustomField>
    <fullName>Apply_Withholding_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Withholding Tax</label>
    <type>Checkbox</type>
</CustomField>