force-app/main/default/objects/Invoice__c/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <label>Bank Account Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BMA ADVOCATES LLP-CLIENT ACCOUNT</fullName>
            </value>
            <value>
                <fullName>HISA REGISTRARS-CLIENT ACCOUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>