force-app/main/default/objects/Invoice__c/fields/Disbursement_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Allowed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement Allowed</label>
    <referenceTo>Matter_Item__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>