force-app/main/default/objects/Invoice__c/fields/Disbursement_Allowed_Name__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Allowed_Name__c</fullName>
    <formula>Disbursement_Allowed__r.Matter_Item_Name__c</formula>
    <label>Disbursement Allowed Name</label>
    <type>Text</type>
</CustomField>