force-app/main/default/objects/Invoice__c/fields/Disbursement_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Amount_Requested__c</fullName>
    <label>Disbursement Amount Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>