force-app/main/default/objects/Invoice__c/fields/Disbursement_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Invoice_Number__c</fullName>
    <label>Disbursement Invoice Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>