force-app/main/default/objects/Invoice__c/fields/Disbursment_Allowed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursment_Allowed_Amount__c</fullName>
    <formula>Disbursement_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disbursment Allowed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>