force-app/main/default/objects/Invoice__c/fields/Hisa_Disbursment_Number__c.field-meta.xml
<CustomField>
    <fullName>Hisa_Disbursment_Number__c</fullName>
    <label>Hisa Disbursment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>