force-app/main/default/objects/Invoice__c/fields/Include_Logo__c.field-meta.xml
<CustomField>
    <fullName>Include_Logo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Logo</label>
    <type>Checkbox</type>
</CustomField>