force-app/main/default/objects/Invoice__c/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <formula>UPPER(Left(Matter__r.Advocate_Responsible__r.FirstName,1)) + UPPER(Left( Matter__r.Advocate_Responsible__r.Middle_Name__c ,1)) + UPPER(Left(Matter__r.Advocate_Responsible__r.LastName,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initials</label>
    <type>Text</type>
</CustomField>