force-app/main/default/objects/Invoice__c/fields/Initials_and_Current_Date__c.field-meta.xml
<CustomField>
    <fullName>Initials_and_Current_Date__c</fullName>
    <formula>Initials__c +&quot;/&quot;+ Current_Month_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initials and Current Date</label>
    <type>Text</type>
</CustomField>