force-app/main/default/objects/Invoice__c/fields/Invoice_Balance__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Balance__c</fullName>
    <description>Matter Subtotal - AmountPaid</description>
    <formula>Matter__r.Sub_Total_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoice Balance without Tax</inlineHelpText>
    <label>Matter Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>