force-app/main/default/objects/Invoice__c/fields/Invoice_Number_Display__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_Display__c</fullName>
    <formula>Invoice_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>