force-app/main/default/objects/Invoice__c/fields/Invoiced_Amount_VAT_16__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Amount_VAT_16__c</fullName>
    <formula>IF(TEXT(Matter__r.Exempted__c) = &quot;NO&quot;, 0.16  * Invoiced_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced Amount VAT 16%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>