force-app/main/default/objects/Invoice__c/fields/Job_Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Job_Allocation_Percentage__c</fullName>
    <description>Total percentage of the job allocation</description>
    <label>Job Allocation Percentage</label>
    <summarizedField>Matter_Team__c.Allocation_Percentage__c</summarizedField>
    <summaryForeignKey>Matter_Team__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>