force-app/main/default/objects/Invoice__c/fields/Legal_Fees__c.field-meta.xml
<CustomField>
    <fullName>Legal_Fees__c</fullName>
    <description>Legal Fees Amount from the Matter</description>
    <formula>Matter__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>