force-app/main/default/objects/Invoice__c/fields/Legal_Fees_Invoiced_is_More__c.field-meta.xml
<CustomField>
    <fullName>Legal_Fees_Invoiced_is_More__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Fees Invoiced is More</label>
    <type>Checkbox</type>
</CustomField>