force-app/main/default/objects/Invoice__c/fields/Matter_Invoice_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Matter_Invoice_Physical_Address__c</fullName>
    <formula>Matter__r.Client__r.Physical_Address__c</formula>
    <label>Matter Invoice Physical Address</label>
    <type>Text</type>
</CustomField>