force-app/main/default/objects/Invoice__c/fields/Matter_Invoice_Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Matter_Invoice_Postal_Address__c</fullName>
    <formula>Matter__r.Client__r.Postal_Address__c</formula>
    <label>Matter Invoice Postal Address</label>
    <type>Text</type>
</CustomField>