force-app/main/default/objects/Invoice__c/fields/New_or_Old_Invoice__c.field-meta.xml
<CustomField>
    <fullName>New_or_Old_Invoice__c</fullName>
    <label>New or Old Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>