force-app/main/default/objects/Invoice__c/fields/Our_Ref__c.field-meta.xml
<CustomField>
    <fullName>Our_Ref__c</fullName>
    <description>Derived from Matter Our Reference</description>
    <formula>Matter__r.Our_Ref__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Our Ref</label>
    <type>Text</type>
</CustomField>