force-app/main/default/objects/Invoice__c/fields/Particulars_Rendered__c.field-meta.xml
<CustomField>
    <fullName>Particulars_Rendered__c</fullName>
    <label>Particulars Rendered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>