force-app/main/default/objects/Invoice__c/fields/Select_Address_On_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Select_Address_On_Invoice__c</fullName>
    <label>Change Address On Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent Matter Client Address</fullName>
            </value>
            <value>
                <fullName>Adverse Party Address</fullName>
            </value>
            <value>
                <fullName>New Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>