force-app/main/default/objects/Invoice__c/fields/Total_of_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Invoice__c</fullName>
    <formula>Invoiced_Amount__c +  Invoiced_Amount_VAT_16__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total of Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>