force-app/main/default/objects/Invoice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disbursements</fullName>
            </value>
            <value>
                <fullName>Legal Fees</fullName>
                <default>true</default>
                <label>Legal Fees</label>
            </value>
            <value>
                <fullName>Proforma Invoice/Fee Note</fullName>
            </value>
            <value>
                <fullName>Hisa Disbursment</fullName>
            </value>
            <value>
                <fullName>Hisa Secretarial Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>