force-app/main/default/objects/Invoice__c/fields/WHT_Amount_on_Fees__c.field-meta.xml
<CustomField>
    <fullName>WHT_Amount_on_Fees__c</fullName>
    <formula>Invoiced_Amount__c * WHT_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WHT Amount (on Fees)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>