force-app/main/default/objects/Invoice__c/fields/WHT_Certificate__c.field-meta.xml
<CustomField>
    <fullName>WHT_Certificate__c</fullName>
    <label>WHT Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Not uploaded</fullName>
                <default>true</default>
                <label>Not uploaded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>