force-app/main/default/objects/Invoice__c/validationRules/Invoice_Balance.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Balance</fullName>
    <active>true</active>
    <errorConditionFormula>Invoice_Balance__c  &lt; 0</errorConditionFormula>
    <errorMessage>The invoice balance cannot be negative.</errorMessage>
</ValidationRule>