force-app/main/default/objects/Invoice__c/validationRules/Invoice_Job_Allocation_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Job_Allocation_Percentage</fullName>
    <active>true</active>
    <errorConditionFormula>Job_Allocation_Percentage__c  &gt; 1.0</errorConditionFormula>
    <errorMessage>The job allocation percentage shouldn&apos;t be more than 100%.</errorMessage>
</ValidationRule>