force-app/main/default/objects/Invoice__c/validationRules/Require_Invoice_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Invoice_Number</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Invoice_Number__c)</errorConditionFormula>
    <errorMessage>Invoice Number is required.</errorMessage>
</ValidationRule>