force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Matter__c</columns>
    <columns>Date__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Type__c</columns>
    <columns>Invoice_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>