force-app/main/default/objects/Invoice__c/listViews/My_Invoices.listView-meta.xml
<ListView>
    <fullName>My_Invoices</fullName>
    <columns>Matter__c</columns>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Invoices</label>
</ListView>